--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12099,4 +12099,50 @@ a {
   color: black;
 }
 
+.navbar-brand img {
+  width: 100px;
+  height: auto;
+}
+
+.contact {
+  display: flex;
+  min-height: 80dvh;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact p {
+  text-align: center;
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+
+.bg-black {
+  background-color: black;
+}
+
+.w-100 {
+  width: 100% !important;
+}
+
+.h-100 {
+  height: 100% !important;
+}
+
+.project-section .project-text {
+  padding: 3rem;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.bg-dark-grey {
+  background-color: #525252;
+}
+
 /*# sourceMappingURL=style.css.map */
