--- a/templates/index.html
+++ b/templates/index.html
@@ -18,12 +18,13 @@
 </head>
 {% block content %}
 
-<body style="background-color: #eee;">
+<body>
     <div class="px-4 py-5 text-center hero-bg">
         <div class="overlay"></div>
         <nav class="navbar navbar-expand-lg mt-2 mb-2 homepage-nav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="{% url 'index' %}">
+                    <img src="../static/images/logo_yoga_black.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -32,11 +33,12 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">O mnie</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'about' %}">O mnie</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Zajęcia</a>
+                            <a class="nav-link" href="{% url 'classes' %}">Zajęcia</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'contact' %}">Kontakt</a>
                         </li>
@@ -52,28 +54,28 @@
                     Iyengara. Poprzez
                     praktykę pomagam innym
                     odzyskać spokój i nabrać wewnętrznej siły.</p>
+                {% comment %} <a href="{% url 'classes' %}" class="btn btn-cloud">Zajęcia</a>
+                <a href="{% url 'about' %}" class="btn btn-outline-cloud">O mnie</a> {% endcomment %}
 
-                <button type="button" class="btn btn-cloud"> Zajęcia </button>
-                <button type="button" class="btn btn-outline-cloud"> Wyjazdy </button>
             </div>
         </div>
     </div>
-    <section style="background-color: #eee;">
+    <section>
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-lg-9 col-xl-7">
-                    <div class="card" style="border:none;background-color: #eee;">
+                    <div class="card" style="border: none;">
                         <div class="card-body p-5">
                             <figure class="text-center mb-0">
                                 <blockquote class="blockquote">
                                     <p class="pb-3">
                                         <span>
                                             <p> Wierzę, że praktyka jogi w połączeniu ze zdrowym stylem życia potrafi
-                                                <mark style="background-color: #d3ad9b;">transformować</mark>. Przekonaj
+                                                <mark class="bg-nude">transformować</mark>. Przekonaj
                                                 się na macie.
                                             </p>
                                             <a style="font-size: small; text-transform: uppercase; text-decoration: none; font-weight: bold;"
-                                                href="#" class="link-dark">dołącz do
+                                                href="{% url 'classes' %}" class="link-dark">dołącz do
                                                 grupy
                                                 &rarr; </a>
                                         </span>
@@ -85,6 +87,52 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="project-section">
+        <div class="container px-4 px-lg-5">
+
+
+            <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
+                <div class="col-lg-6"><img class="img-fluid" src="/static/images/h_warrior.jpg" alt="..." />
+                </div>
+                <div class="col-lg-6">
+                    <div class="bg-dark-grey text-center h-100">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-left">
+                                <h4 class="text-white">Zajęcia jogi</h4>
+                                <p class="mb-0 text-white-50">Joga według metody B.K.S.
+                                    Iyengara obejmuje praktykę
+                                    według określonego porządku - jedna grupa asan na tydzień.</p><a
+                                    style="font-size: x-large; text-transform: uppercase; text-decoration: none; font-weight: bold;"
+                                    href="{% url 'classes' %}" class="link-light">
+                                    &rarr; </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row gx-0 justify-content-center">
+                <div class="col-lg-6"><img class="img-fluid" src="/static/images/h_yoga_pose.jpeg" alt="..." /></div>
+                <div class="col-lg-6 order-lg-first">
+                    <div class="bg-dark-grey text-center h-100">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <h4 class="text-white">Wyjazdy jogowe</h4>
+                                <p class="mb-0 text-white-50">Najczęściej mają formę wyjazdów weekendowych.
+                                    Praktykujemy, spacerujemy, medytujemy i odpoczywamy.</p>
+                                <a style="font-size: x-large; text-transform: uppercase; text-decoration: none; font-weight: bold;"
+                                    href="{% url 'events' %}" class="link-light">
+                                    &rarr; </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     </section>
     <div class="container pt-2 mt-2">
         <footer>
