environs implemented and staticfiles collected

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -19,6 +19,9 @@ $theme-colors: map-merge($theme-colors, $custom-theme-colors);
         sans-serif;
 }
 
+body {
+    background-color: #f1f1f1;
+}
 
 h1,
 h2,
