--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,12 @@
 </head>
 
 
-<body style="background-color: #f1f1f1;">
+<body>
     <div class="px-4 py-5 text-center">
         <nav class="navbar navbar-expand-lg mt-2 mb-2 base-nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'index' %}">
-                    <img src="../static/images/logo_yoga.png" alt="logo"></a>
+                    <img src="{% static 'images/logo_yoga.png' %}" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
