modified toml file for deploy

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,8 +54,8 @@
                     Iyengara. Poprzez
                     praktykę pomagam innym
                     odzyskać spokój i nabrać wewnętrznej siły.</p>
-                {% comment %} <a href="{% url 'classes' %}" class="btn btn-cloud">Zajęcia</a>
-                <a href="{% url 'about' %}" class="btn btn-outline-cloud">O mnie</a> {% endcomment %}
+                {% comment %} <a href="{% url 'classes' %}" class="btn btn-cloud">Dołącz do grupy</a> {% endcomment %}
+                {% comment %} <a href="{% url 'about' %}" class="btn btn-outline-cloud">O mnie</a>  {% endcomment %}
 
             </div>
         </div>
