--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
     <div class="container pt-2 mt-2 fixed-bottom">
         <footer>
             <hr>
-            <p class="text-center text-muted" style="font-size: small;">website made by <a href="#"
+            <p class="text-center text-muted" style="font-size: small;">website made by <a href="https://djangodesigned.com/"
                     class="link-nude">django
                     designed</a></p>
         </footer>
