--- a/templates/about.html
+++ b/templates/about.html
@@ -39,7 +39,7 @@
 <div class="container pt-2 mt-2">
     <footer>
         <hr>
-        <p class="text-center text-muted" style="font-size: small;">website made by <a href="#" class="link-nude">django
+        <p class="text-center text-muted" style="font-size: small;">website made by <a href="https://djangodesigned.com/" class="link-nude">django
                 designed</a></p>
     </footer>
 </div>
