--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
     <div class="container pt-2 mt-2">
         <footer>
             <hr>
-            <p class="text-center text-muted" style="font-size: small;">website made by <a href="#"
+            <p class="text-center text-muted" style="font-size: small;">website made by <a href="https://djangodesigned.com/"
                     class="link-nude">django
                     designed</a></p>
         </footer>
