info about prices

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -58,23 +58,14 @@
     </div>
 </section>
 
-{% comment %} <!-- Info about payment and booking -->
+<!-- Info about payment and booking -->
 <section class="yoga-classes-info">
     <div class="container my-5 py-5">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 text-lg-left">
-                <h5 class="text-uppercase mb-4 pb-1">Kontakt</h5>
-                <p>info@jogagosiapardula.pl<br>
-                    +48 123-456-789</p>
-            </div>
-            <div class="col-lg-6 col-md-6">
-                <h5 class="text-uppercase mb-4 pb-1">Cennik</h5>
-                <p class="text-lg-left">Koszt karnetu na 4 zajęcia:
-                    150zł,
-                    na 8
-                    zajęć 230zł. <br>Pojedyncze wejście 50zł.</p>
-            </div>
-</section> {% endcomment %}
+        <p style="font-size:small">* Na zajęcia obowiązują zapisy - mozesz zarezerwować miejsce wpisując adres email.
+        <br>
+        ** Koszt karnetów: 150zł (4 zajęcia), 230zł (8 zajęć). Pojedyncze wejście 50zł.</p>
+        
+</section>
 
 <div class="container pt-2 mt-2">
     <footer>
