implementing booking feature

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -18,7 +18,7 @@
                     <small class="text-muted">czwartek 9:00</small>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">Wrocław, Sudecka 147B</small>
+                    <small class="text-muted">Wrocław, Przyjaźni 314B</small>
                 </div>
                 <div class="card-footer">
                     <a class="btn btn-nude" href="{% url 'monthly_classes' %}">zarezerwuj</a>
@@ -33,7 +33,7 @@
                     <small class="text-muted">wtorek 18:00 i 19:15</small>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">Wrocław, Sudecka 147B</small>
+                    <small class="text-muted">Wrocław, Przyjaźni 314B</small>
                 </div>
                 <div class="card-footer">
                     <a class="btn btn-nude" href="{% url 'monthly_classes' %}">zarezerwuj</a>
@@ -43,7 +43,7 @@
                 <img src="{% static 'images/h_warrior_hands.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Yoga in English</h5>
-                    <p class="card-text">If you look for a yoga teacher who will explain everything during the practise
+                    <p class="card-text">If you look for a yoga teacher who will explain everything during the practise,
                         feel
                         free to join my group or book individual meeting.</p>
                 </div>
