--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gosia Parduła Joga</title>
+    <title>Szablon www dla szkoły jogi</title>
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg mt-2 mb-2 homepage-nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'index' %}">
-                    <img src="{% static 'images/logo_yoga_black.png' %}" alt="logo"></a>
+                    <img src="{% static 'images/logo_yoga_white.png' %}" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
         </nav>
 
         <div class="py-5 mt-5">
-            <h1 class="display-5 py-3 mb-3">Małgorzata Parduła</h1>
+            <h1 class="display-5 py-3 mb-3">Anna Kowalska</h1>
             <div class="col-md-8 col-lg-3 mx-auto text-center">
                 <p class="lead mb-4">Jestem nauczycielką jogi metodą
                     Iyengara. Poprzez
