--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <div class="text-center contact">
-        <p style="text-transform: uppercase;"> Napisz: info@jogagosiapardula.pl</p>
+        <p style="text-transform: uppercase;"> Napisz: joga@annakowalska.pl</p>
     </div>
     <div class="container pt-2 mt-2 fixed-bottom">
         <footer>
