--- a/templates/events.html
+++ b/templates/events.html
@@ -1,7 +1,7 @@
 {% include 'base.html' %}
 {% block content %}
 
-{% now 'Y-m-d' as today %}
+
 
 <div class="container my-5">
     <h1>Wyjazdy jogowe</h1>
@@ -9,16 +9,15 @@
         {% if events %}
         {% for event in events %}
         <div class="col-md-4 mb-4">
-            <div class="card {% if event.from_date|date:'d-m-Y' < today %} bg-dark-grey {% endif %}">
+            <div class="card {% if event.from_date < today %} bg-dark-grey {% endif %}">
                 <div class="card-body">
-                    <p class="text-cloud">{% if event.from_date|date:'Y-m-d' > today %} WKRÓTCE {%else%} MINIONE {%endif%}</p>
+                    <p class="text-cloud">{% if event.from_date > today%} WKRÓTCE {%else%} MINIONE {%endif%}</p>
                     <h5 class="card-title my-3"> {{ event.title }}</h5>
                     <p class="card-text"> {{ event.description }}</p>
                     <p class="card-text" style="font-weight: bold;">Termin: {{ event.from_date|date:'d.m.Y'}} -
                         {{event.to_date|date:'d.m.Y'}}</p>
                     <p class="card-text" style="font-size: small"> Zapisy: info@jogagosiapardula.pl</p>
                 </div>
-
             </div>
         </div>
         {% endfor %}
